--- a/package.json
+++ b/package.json
@@ -34,5 +34,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "crcf":[
+    "cssmodules",
+    "functional",
+    "uppercase",
+    "proptypes",
+    {
+      "output" : "src/components"
+    }
+  ]
 }
