--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "formik": "^2.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,13 +37,13 @@
       "last 1 safari version"
     ]
   },
-  "crcf":[
+  "crcf": [
     "cssmodules",
     "functional",
     "uppercase",
     "proptypes",
     {
-      "output" : "src/components"
+      "output": "src/components"
     }
   ]
 }
